@@ -3188,14 +3188,9 @@ _toBoolean (const operand * oper, bool needflag)
         {
           emit2 ("res 7, a");   //clear sign bit
           regalloc_dry_run_cost += 2;
-          while (--size)
-            emit3_o (A_OR, ASMOP_A, 0, AOP (oper), offset--);
         }
-      else
-        {
-          while (--size)
-            emit3_o (A_OR, ASMOP_A, 0, AOP (oper), offset--);
-        }
+      while (--size)
+        emit3_o (A_OR, ASMOP_A, 0, AOP (oper), offset--);
     }
   else if (needflag)
     {
