@@ -34,11 +34,6 @@
 #   define NEG_DISABLED  (1)
 #endif
 
-#if defined(__SDCC_stm8)
-#   define FLOORF_DISABLED  (1)
-#   define NEG_DISABLED  (1)
-#endif
-
 static float
 dummy (float a)
 {
